--- a/ChatGame/ChatGame.vcxproj.filters
+++ b/ChatGame/ChatGame.vcxproj.filters
@@ -105,4 +105,15 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="configs\players.ini">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="configs\startup.ini">
+      <Filter>Resource Files</Filter>
+    </None>
+    <None Include="configs\waypoints.ini">
+      <Filter>Resource Files</Filter>
+    </None>
+  </ItemGroup>
 </Project>
